<resources>
    <!-- Strings used globally -->
    <string name="app_name">BookFlow</string>
    <string name="book_name">book name</string>
    <string name="placeholder">Placeholder</string>
    <string name="confirm">Confirm</string>

    <!-- Strings for login screen -->
    <string name="remember_login">Remember My Login</string>
    <string name="register">Not having an account?</string>
    <string name="login_button">\t\tLogin\t\t</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>

    <!-- Strings for edit book detail screen -->
    <string name="bookName">Book Title</string>
    <string name="authorName">Author</string>
    <string name="ISBN">ISBN</string>
    <string name="bookStatus">Status</string>
    <string name="borrower">Current Borrower</string>
    <string name="LOCATION">LOCATION</string>

    <!-- Strings for user profile screen -->
    <string name="email">Email:\t\t\t</string>
    <string name="phone">Phone:\t\t</string>
    <string name="booksOffered">Books Offered:</string>
    <string name="review">Reviews:</string>
    <string name="writeReview">WRITE REVIEW</string>

    <!-- Strings for write a review -->
    <string name="writingReview">Write Down Your Review</string>
    <string name="rate_1">Rate This User</string>
    <string name="cancel_review">Cancel</string>
    <string name="initRate">3</string>

    <!-- main -->
    <string name="more"><![CDATA[>>More]]></string>
    <string name="my_borrows">My Borrows</string>
    <string name="my_books">My Books</string>


    <!-- array for spinner -->
    <string-array name="searchSelection">
        <item>search user</item>
        <item>search book</item>


    </string-array>

    <!-- array for spBook and spBorrow -->
    <string-array name="mainSelection">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>

    </string-array>

    <!-- array for pick photo dialog -->
    <string-array name="pick_photo_array">
        <item>Choose From Album</item>
        <item>Take A Photo</item>
    </string-array>

    <!-- add book -->
    <string name="title_activity_add_photo">AddPhotoActivity</string>
    <string name="add_photo_image_button_description">Take A Photo</string>
    <string name="done">DONE</string>
    <string name="pick_a_photo">Pick A Photo From</string>
    <string name="add_book_image">Add Book Image</string>

    <!-- edit user profile -->
    <string name="Introduction">Introduction</string>
    <string name="edit_email">Email</string>
    <string name="edit_phone">Phone</string>
    <string name="add_book_success">New book added!</string>
    <string name="add_book_error">Error occurred. Please try again.</string>
    <string name="add_book_invalid_info">Please enter required fields</string>
    <string name="books_offered">Offers</string>
    <string name="books_requested">Requests</string>
    <string name="review_list">Reviews</string>
    <string name="fix_offers">Offers:</string>
    <string name="fix_requests">Requests:</string>

    <!-- barcode scanner -->
    <string name="scan_the_barcode">Scan the barcode</string>
    <string name="save">save</string>
    <string name="book_detail">Book detail</string>
    <string name="scan">scan</string>
    <string name="edit_book_success">Edit book success!</string>
    <string name="edit_book_error">Edit book failed. Try again :(</string>
    <string name="we_need_write_permission">We need write permission to complete this actioin.</string>
    <string name="transaction">transaction</string>
    <string name="request">request</string>
    <string name="view_requests">View Requests</string>
    <string name="edit_book">edit book</string>
    <string name="isbn_doesnt_match">ISBN doesn\'t match.</string>
    <string name="scan_successful">Scan Successful!</string>
    <string name="invalid_operation">Invalid Operation!</string>
    <string name="bookflow">BookFlow</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>

    <!-- edit book -->
    <string name="editboxTitle">How will you rate this book?</string>
    <string name="delete_book_success">Delete book success!</string>
    <string name="delete_book_fail">Failed to delete a book, Please try again</string>
    <string name="book_image">Book Image</string>
    <string name="delete_image">delete image</string>
    <string name="book_photo_deleted">Book photo deleted!</string>
    <string name="book_photo_delete_failed">Failed to delete photo. Try again?</string>
    <string name="location_not_set">Location not set for this book.</string>
    <string name="logged_in">Logged in</string>
    <string name="login_failed">Login Failed</string>
    <string name="book_already_requested">you have already requested this book</string>

</resources>
