<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileActivity">

    <include
        android:id="@+id/include2"
        layout="@layout/activity_basic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/editPersonInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@drawable/simple_black_border"
        android:contentDescription="@string/placeholder"
        android:onClick="editProfile"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/userInfoDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/edit_icon" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:gravity="fill"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/userPicture"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/placeholder"
            app:srcCompat="@drawable/shiki_face" />

        <LinearLayout
            android:id="@+id/userNameAndDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="3"
            android:gravity="fill"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:text="@string/placeholder"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/selfIntro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/placeholder" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/userInfoDetail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="top|start"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/include2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/round_border"
            android:orientation="horizontal"
            android:paddingTop="2dp"
            android:paddingBottom="2dp">

            <TextView
                android:id="@+id/fixEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/email"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/emailToBeChange"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/phoneLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/round_border"
            android:orientation="horizontal"
            android:paddingTop="2dp"
            android:paddingBottom="2dp">

            <TextView
                android:id="@+id/fixPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/phone"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/phoneToBeChange"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/review_switch"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/red_button"
                android:onClick="switchReview"
                android:text="@string/review_list"
                android:textColor="#000000" />

            <Button
                android:id="@+id/offer_switch"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/normal_button"
                android:onClick="switchOffer"
                android:text="@string/books_offered"
                android:textColor="#000000" />

            <Button
                android:id="@+id/request_switch"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/normal_button"
                android:onClick="switchRequest"
                android:text="@string/books_requested"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/reviewsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:background="@drawable/triangle"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/fixReviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/review"
                android:textColor="#000000"
                android:textSize="18sp" />

            <ListView
                android:id="@+id/reviewList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/offerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/triangle"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/fixOffers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/fix_offers"
                android:textColor="#000000"
                android:textSize="18sp" />

            <ListView
                android:id="@+id/offerList"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/requestLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/triangle"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/fixRequests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/fix_requests"
                android:textColor="#000000"
                android:textSize="18sp" />

            <ListView
                android:id="@+id/requestList"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>